[package]
name = "payload-dumper-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
binrw = "0.9"
lzma-rs = "0.2"
tracing = "0.1"
clap = { version = "3.2", features = ["derive"] }
indicatif = "0.16.2"
size = "0.4"
# https://github.com/paolobarbolini/bzip2-rs/issues/13
# bzip2-rs = "0.1"
libribzip2 = "0.5"

[build-dependencies]
prost-build = "0.5"
